hometask  - Allure configuration has been added.