@@ -7,26 +7,101 @@
     <groupId>Otus.ru.FindFlightsTicketPurchaseTask</groupId>
     <artifactId>TicketPurchaseTask</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--<build>-->
+    <!--&lt;!&ndash;<outputDirectory>${basedir}/${target.dir}/classes</outputDirectory>&ndash;&gt;-->
+    <!--&lt;!&ndash;<testOutputDirectory>${basedir}/${target.dir}/test-classes</testOutputDirectory>&ndash;&gt;-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-surefire-plugin</artifactId>-->
+    <!--<version>2.21.0</version>-->
+    <!--<configuration>-->
+    <!--<argLine>-->
+    <!-- -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
+    <!--</argLine>-->
+    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+    <!--<systemPropertyVariables>-->
+    <!--<browser>${browser}</browser>-->
+    <!--</systemPropertyVariables>-->
+    <!--<suiteXmlFiles>-->
+    <!--<suiteXmlFile>${project.basedir}/src/test/resources/testsuite.xml</suiteXmlFile>-->
+    <!--</suiteXmlFiles>-->
+    <!--</configuration>-->
+    <!--<dependencies>-->
+    <!--<dependency>-->
+    <!--<groupId>org.aspectj</groupId>-->
+    <!--<artifactId>aspectjweaver</artifactId>-->
+    <!--<version>1.8.13</version>-->
+    <!--</dependency>-->
+    <!--</dependencies>-->
+    <!--</plugin>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-compiler-plugin</artifactId>-->
+    <!--<version>3.7.0</version>-->
+    <!--<configuration>-->
+    <!--<source>1.8</source>-->
+    <!--<target>1.8</target>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
+    <!--</plugins>-->
+    <!--</build>-->
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>2.18.1</version>
                 <configuration>
-                    <systemPropertyVariables>
-                        <browser>${browser}</browser>
-                    </systemPropertyVariables>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <encoding>UTF-8</encoding>
+                    <inputEncoding>UTF-8</inputEncoding>
+                    <outputEncoding>UTF-8</outputEncoding>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.build.directory}/allure-results</value>
+                        </property>
+                        <systemPropertyVariables>
+                            <browser>${browser}</browser>
+                        </systemPropertyVariables>
+                    </systemProperties>
                     <suiteXmlFiles>
                         <suiteXmlFile>${project.basedir}/src/test/resources/testsuite.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+
     <properties>
-        <browser></browser>
+        <browser>chrome</browser>
+        <target.dir>target</target.dir>
+        <aspectj.version>1.8.10</aspectj.version>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -56,7 +131,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
 
@@ -66,6 +141,41 @@
             <version>3.12.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.opera/operadriver -->
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
+
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <!--<properties>-->
+                    <!--<allure.issues.tracker.pattern>http://example.com/%s</allure.issues.tracker.pattern>-->
+                    <!--</properties>-->
+                    <resultsDirectory>allure-results</resultsDirectory>
+                    <reportVersion>2.7.0</reportVersion>
+                    <!--<reportDirectory>allure-report</reportDirectory>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
